<resources>
    <string name="app_name">ENSI\'COM</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="numero">Numéro</string>
    <string name="action_save">action_save</string>
    <string name="action_quit">action_quit</string>
    <string name="action_delete">action_delete</string>
    <string name="action_call">action_call</string>
    <string name="action_change">action_change</string>
    <string name="action_edit">action_edit</string>
    <string name="quitter">Quitter</string>
    <string name="textview_registerHeaderContent">Inscription</string>
    <string name="textview_registerMail">Email :</string>
    <string name="textview_registerPasswordContent">Mot de passe :</string>
    <string name="textView_registerNameDisplay">Votre prénom</string>
    <string name="adresse_mail">john.smith@uha.fr</string>
    <string name="button_register">Créer un compte</string>
    <string name="button_login">Se connecter</string>
    <string name="temp_email">prénom.nom@uha.fr</string>
    <string name="temp_name">Prénom</string>
    <string name="menu_logout">Déconnexion</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_title">Menu</string>
    <string name="button_actualites">Actualités</string>
    <string name="button_evenements">Événements</string>
    <string name="event_title">Titre de événement</string>
    <string name="menu_description">Menu</string>
    <string name="filter_1">Filtre 1</string>
    <string name="filter_2">Filtre 2</string>
    <string name="filter_3">Filtre 3</string>
    <string name="open">Ouvrir</string>
    <string name="close">Fermer</string>
    <string name="logo">Logo</string>
    <string name="menu_bouton">Menu Bouton</string>
    <string name="user_menu_title">User Menu</string>
    <string name="on_user_menu_button">User Utilisateur</string>
    <string name="post">Ajout post</string>
    <string name="plus">Bouton plus</string>
    <string name="menu_profil">Profil</string>
    <string name="parametres">Parametres</string>
    <string name="welcome_message">Bienvenue sur ENSI\'COM</string>
    <string name="popup_content">Contenu de la fenêtre contextuelle</string>
    <string name="event_filters">Filtres d\'événements</string>
    <string name="filters_title">Filtres d\'actualités</string>
    <string name="important_dates">Dates importantes :</string>
    <string name="event_description">Description de événement</string>
    <string name="hello_blank_fragment">Ca marche</string>
    <string name="Ajouter">Ajouter</string>
    <string name="Annuler">Annuler</string>
    <string name="ajout">Ajouter un événement</string>
    <string name="titre">Titre de l\'évenement</string>
    <string name="description">Description de l\'évenement</string>
    <string name="name">CalendarAppExample</string>
    <string name="Date">Date</string>
    <string name="Name">Evénement</string>

    <style name="CalendarDateStyle">
        <item name="android:textSize">14sp</item> <!-- Taille du texte -->
        <item name="android:textColor">#000000</item> <!-- Couleur du texte -->
    </style>

    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thuesday">THU</string>
    <string name="un">1</string>
    <string name="friday">FRI</string>
    <string name="add">+</string>
    <string name="saturday">SAT</string>
    <string name="date">Juin 2023</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="title_activity_about">AboutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>