<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/menu_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/menu"
        android:padding="16dp"
        android:background="#87CEFA"
        android:contentDescription="@string/menu_title"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onMenuButtonClick" />

        <!-- Filtres d'actualités -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters_title"
        android:textColor="#000000"
        android:textSize="16sp"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:button="@drawable/checkbox_round"
        android:layout_marginBottom="16dp"
        android:text="@string/filter_1" />

    <CheckBox
        android:id="@+id/checkbox2"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:button="@drawable/checkbox_round"
        android:text="@string/filter_2" />

    <CheckBox
        android:id="@+id/checkbox3"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:button="@drawable/checkbox_round"
        android:text="@string/filter_3" />

</LinearLayout>

        <!-- Filtres d'événements -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_filters"
        android:textColor="#000000"
        android:textSize="16sp"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/important_dates"
        android:textColor="#000000"
        android:padding="8dp" />

    </LinearLayout>

</LinearLayout>