<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/action_edit"
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom" />

    <item android:title="@string/action_delete"
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom" />

    <item android:title="@string/action_call"
        android:id="@+id/action_call"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_call"
        app:showAsAction="ifRoom" />

</menu>